css/style.css
#container {
 width: 100%;
 margin: 0px auto;
}
#app {
 display: flex;
 flex-flow: row;
}

/*Text*/
p, h1, h2, h3, h4, h5, label, button, li {
 font-family: 'Open Sans', sans-serif;
 margin: 0;
}

h2 {
 margin: 20px 0px 10px 0px;
 text-transform: uppercase;
}

h3.title {
 font-weight: 800;
 color: #ffffff;
 text-transform: uppercase;
 line-height: 1;
}

h4.category {
 font-weight: 700;
 color: #ffffff;
 text-transform: uppercase;
 letter-spacing: 10px;
 line-height: 1;
}

h5.pillar,
.general h5.pillar,
.game h5.pillar {
 font-weight: 700;
 text-transform: uppercase;
 color: #00b0dc;
 white-space: nowrap;
 line-height: 1;
 letter-spacing: 5px;
}

.gear h5.pillar {
 color: #11d3be ;
}

.culture h5.pillar {
 color: #dd49ea  ;
}

/*Elements*/
[type="text"] {
 width: 100%;
 margin: 5px 0px 0px 0px;
}

.label {
 margin: 10px 0px 0px 0px;
}

.button {
 background: none;
 border: 1px solid #dddddd;
 border-radius: 3px;
 padding: 5px 10px;
 font-size: 13px;
}

.button.upload {
 background-color: #11d3be;
 border-color: #009f74 !important;
 color: white;
}

.button.download {
 background-color: #00b0dc;
 border-color: #003298 !important;
 color: white;
}

body,
#container {
 margin: 0px auto;
 display: flex;
 width: 100%;
}

#header {
 width: 100%;
 margin: 0px auto;
 position: fixed;
 display: block;
}

#header .logobar {
 padding: 20px 20px;
 background: rgb(78,0,185);
 background: linear-gradient(45deg, #4e00b9 0%, #11d3be 100%);
 color: #ffffff;
 display: flex;
 flex-wrap: nowrap;
 align-items: center;
 justify-content: space-between;
}

#header .logo {
 width: 200px;
}

#header .menu {
 border-bottom: 1px solid #dddddd;
 background-color: #ffffff;
}

#header .menu ul {
 margin: 0;
 padding: 0;
}

#header .menu li {
 list-style: none;
 display: inline-block;
 padding: 20px 0px;
}

#header .menu li:hover {
 background-color: #11d3be26;
}

#header .menu li a {
 padding: 20px 20px;
 color: #333333;
 text-decoration: none;
}

#header .menu li a.external:after {
 margin-left: 10px;
 font-family: "Font Awesome 5 Pro"; 
 font-weight: 900; 
 content: "\f35d";
 color: #dddddd;
}

#header .logobar i {
 display: none;
}

#app,
#content {
 padding: 153px 0px 0px 0px;
}

#content {
 padding-left: 20px;
 padding-right: 20px;
}

div.pillar {
 background-color: white;
 padding: 10px 20px;
 transform: skewX(15deg);
}

/*Home - Content*/
.intro p {
 margin: 0px 0px 20px 0px;
}

.intro p a {
 color: #11d3be;
}

/*Home - menu*/
#menu {
 display: grid;
 grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 columns: 4;
 gap: 20px;
}

#menu .item {
 background-color: #ffffff;
 padding: 20px;
 border: 1px solid #dddddd;
 border-radius: 5px;
 cursor: pointer;
 transition: 300ms;
}

#menu .item a {
 text-decoration: none;
 color: #333333;
}

#menu .item img {
 max-width: 100%;
 margin: 0px auto;
}

#menu .item p {
 font-weight: bold;
 text-transform: uppercase;
 text-align: center;
 margin: 20px 0px 0px 0px;
}

#menu .item:hover {
 filter: drop-shadow(2px 2px 3px #33333325);
 transform: scale(1.02);
}

/*Input*/
#input {
 width: 300px;
 height: 100%;
 border-right: 1px solid #dddddd;
 background-color: #ffffff;
 padding: 0px 20px 20px 20px;
}

#input #pillar_input {
 display: flex;
 flex-direction: column;	
}

#input p.label {
 font-weight: bold;
}

#input #pillar_input div label {
 margin: 0px 0px 0px 10px;
}

#input .sliderContainer {
 width: 100%;
}

#input .sliderContainer .sliderBox {
 display: flex;
 width: 100%;
}

#input .sliderContainer .sliderBox input {
 width: 70%;
 margin: 0px 10px 0px 0px;
}

#input .sliderContainer .sliderBox p {
 width: 30%;
 text-align: right;
}

#input button#download {
 margin: 20px 0px;
}

#input div.button_div {
 margin: 20px 0px 0px 0px;
}

#input .margin-bottom {
 margin-bottom: 30px !important;
}

/*Input - Featured floating*/
#input #pillar_input div label.rainbow {
 background-image: linear-gradient(to left, violet, indigo, blue, green, yellow, orange, red);
 -webkit-background-clip: text;
 -webkit-text-fill-color: rgba(51, 51, 51, 0.25);
 font-weight: bold;
}

#input div#featured_floating_img-1 div.button_div,
#input div#featured_floating_img-2 div.button_div,
#input div#featured_floating_img-3 div.button_div {
 margin: 20px 0px 20px 0px;
}

#input div#featured_floating_img-1,
#input div#featured_floating_img-2,
#input div#featured_floating_img-3 {
 margin: 0px 0px 30px 0px;
}

/*Output*/
#output {
 padding: 0px 20px 20px 20px;
 z-index: -1;
}

#output .image_screen {
 overflow: hidden;
 height: 100%;
 width: 100%;
}

#output_art .image_screen,
#output_gear .image_screen,
#output_featured-floating .image_screen {
 position: relative;
}

/*16:9*/
#output #output_16-9 {
 width: 1920px;
 height: 1080px;
 background-color: rgba(51, 51, 51, 0.25);
 overflow: hidden;
}

#output #output_16-9 .background_img {
 position: absolute;
 width: 1920px;
 z-index: -1;
 overflow: hidden;
}

#output #output_16-9 .overlay {
 width: 1920px;
 height: 1080px;
 position: absolute;
 top: 0;
} 

#output #output_16-9 .text {
 position: absolute;
 bottom: 140px;
 left: 140px;
 right: 140px;
}

#output #output_16-9 h3.title {
 font-size: 100px;
}

#output #output_16-9 h4.category {
 font-size: 40px;
 white-space: nowrap;
}

#output #output_16-9 div.pillar {
 position: absolute;
 left: 120px;
 top: 190px;    
}
#output #output_16-9 h5.pillar {
 font-size: 25px;
 transform: skewX(-15deg);
}

/*1:1*/
#output #output_1-1 {
 width: 1080px;
 height: 1080px;
 overflow: hidden;
 background-color: rgba(51, 51, 51, 0.25);
}

#output #outpuy_1-1 .image_screen,
#output #outpuy_9-16 .image_screen {
 position: relative;
 right: -50%;
}

#output #output_1-1 .background_img {
 position: absolute;
 left: -50%;
 width: 1920px;
 z-index: -1;
 overflow: hidden;
}

#output #output_1-1 .overlay {
 width: 1080px;
 height: 1080px;
 position: absolute;
 top: 0;
} 

#output #output_1-1 div.pillar {
 position: absolute;
 left: 120px;
 top: 190px;    
}

#output #output_1-1 h5.pillar {
 font-size: 25px;
 transform: skewX(-15deg);
}

#output #output_1-1 .text {
 position: absolute;
 bottom: 140px;
 left: 140px;
 right: 140px;
}

#output #output_1-1 h4.category {
 font-size: 30px;
 padding: 0 0 10px 0;
 white-space: nowrap;
}

#output #output_1-1 h3.title {
 font-size: 75px;
}

/*9:16*/
#output #output_9-16 {
 width: 1080px;
 height: 1920px;
 overflow: hidden;
 background-color: rgba(51, 51, 51, 0.25);
}

#output #output_9-16 .background_img {
 position: absolute;
 top: 240px;
 left: -50%;
 height: 1440px;
 z-index: -1;
 overflow: hidden;
}

#output #output_9-16 .overlay {
 width: 1080px;
 height: 1920px;
 position: absolute;
 top: 0;
} 

#output #output_9-16 div.pillar {
 position: absolute;
 left: 120px;
 top: 345px;    
}
#output #output_9-16 h5.pillar {
 font-size: 25px;
 transform: skewX(-15deg);
}

#output #output_9-16 .text {
 position: absolute;
 bottom: 300px;
 left: 140px;
 right: 140px;
}

#output #output_9-16 h4.category {
 font-size: 30px;
 padding: 0 0 10px 0;
 white-space: nowrap;
}

#output #output_9-16 h3.title {
 font-size: 75px;
}

/*Output - Art*/
#output #output_art {
 width: 1920px;
 height: 1080px;
 background-color: rgba(51, 51, 51, 0.25);
 overflow: hidden;
}

#output #output_art .art_image {
 max-height: 880px;
 max-width: 1564px;
 border: 20px solid #ffffff;
 background-color: #333333;
 position: absolute;
 margin: auto;
 top: 0;
 left: 0;
 right: 0;
 bottom: 0;
 filter: drop-shadow(0 0 40px #33333325);
}

#output #output_art .art_background {
 width: calc(100% + 40px);
 filter: blur(20px);
 -webkit-filter: blur(20px);
 position: absolute;
 margin: auto;
 top: 0;
 left: -20px;
 right: 0;
 bottom: 0;
 z-index: -1;
}

/*Output - Gear*/
#output #output_gear {
 width: 1920px;
 height: 1080px;
 overflow: hidden;
}

#output #output_gear .gear_image {
 max-height: 880px;
 max-width: 1564px;
 position: absolute;
 margin: auto;
 top: 0;
 left: 0;
 right: 0;
 bottom: 0;
}

#output #output_gear .gear_background {
 width: 100%;
 height: 100%;
 background: #ffffff;
 background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(249,249,249,1) 100%);
 position: absolute;
 top: 0;
 bottom: 0;
 left: 0;
 right: 0;
 margin: auto;
 z-index: -1;
}

#output #output_gear .gear_block {
 height: 170%;
 width: 170%;
 background: #009f74;
 background: linear-gradient(180deg, #11d3be 0%, #009f74 100%);
 transform: rotate(0deg);
 transform-origin: bottom center;
 position: relative;
 top: -110%;
 left: -30%;
}

/*Output - Featured floating*/
#output #output_featured-floating {
 width: 1920px;
 height: 1080px;
 overflow: hidden;
}

#output #output_featured-floating.output.general {
 background: rgb(17,211,190);
 background: linear-gradient(-138deg, rgba(17,211,190,1) 0%, rgba(78,0,185,1) 100%);
}

#output #output_featured-floating.output.game {
 background: rgb(0,176,220);
 background: linear-gradient(-138deg, rgba(0,176,220,1) 0%, rgba(0,50,152,1) 100%);
}

#output #output_featured-floating.output.gear {
 background: rgb(17,211,190);
 background: linear-gradient(-138deg, rgba(17,211,190,1) 0%, rgba(0,159,116,1) 100%);
}

#output #output_featured-floating.output.culture {
 background: rgb(221,73,234);
 background: linear-gradient(-138deg, rgba(221,73,234,1) 0%, rgba(78,0,185,1) 100%);
}

#output #output_featured-floating.output.rainbow {
 background: rgb(233,165,165);
 background: linear-gradient(-138deg, rgba(233,165,165,1) 0%, rgba(184,193,192,1) 25%, rgba(101,192,224,1) 50%, rgba(174,162,219,1) 75%, rgba(129,193,217,1) 100%);
}

#output #output_featured-floating .image_screen #image_1,
#output #output_featured-floating .image_screen #image_2,
#output #output_featured-floating .image_screen #image_3 {
 width: 35%;
 overflow: hidden;
 transform: skewX(-15deg);
 position: absolute;
 top: 0;
 bottom: 0;
 margin: auto;
 filter: drop-shadow(0 0 10px #33333325);
 background-color: #dddddd;
 }

#output #output_featured-floating .image_screen #image_1 {
 height: 780px;
 left: 150px;
 z-index: 1;
}

#output #output_featured-floating .image_screen #image_2 {
 height: 980px;
 left: 0;
 right: 0;
 z-index: 3;
}

#output #output_featured-floating .image_screen #image_3 {
 height: 780px;
 right: 150px;
 z-index: 2;
}

#output #output_featured-floating .image_screen #image_1 img,
#output #output_featured-floating .image_screen #image_2 img,
#output #output_featured-floating .image_screen #image_3 img {
 transform: skewX(15deg);
 min-width: 940px;
 max-width: 1920px;
 min-height: 1080px;
 position: absolute;
 top: 0;
 bottom: 0;
 left: -50%;
 margin: auto;
}

/* Large screens */
@media screen and (min-width: 2000px) {
 #input button#download {
  position: fixed;
  bottom: 20px;
 }
}

/*Mobile*/
@media screen and (max-width: 768px) {
 /* Header */
 #header .menu {
  display: none;
 }

 #header h1 {
  display: none !important;
 }
 
 /* Menu */

 #header .logobar #mobMenuIcon {
  color: #ffffff;
  cursor: pointer;
  display: block
 }

 /* Content */
 #app, #content {
  padding-top: 81px;
 }
}

@media screen and (max-width: 426px) {
 /* Header */
 #header .logo {
  width: 150px
 }

 #app, #content {
  padding-top: 69px;
  margin-bottom: 20px;
 }

 /* Menu */
 #navbar.menu.active {
  display: block;
 }

 #navbar.menu.active li, 
 #navbar.menu.active li a {
  width: 100%;
  display: block;
  padding: 10px;
 }

 #navbar.menu.active li:not(:first-child) {
  border-top: 1px solid #dddddd
 }

 #navbar.menu.active li:active, 
 #navbar.menu.active li:hover {
  background-color: rgba(17, 211, 190, 0.25);
 }
}

